# pred

./: README.md  pyproject.toml
src/pred/: __init__.py  cli.py
src/pred/evaluation/: metrics.py
src/pred/ingest/: sources.py
src/pred/models/: poisson.py  types.py
src/pred/odds/: convert.py
src/pred/ratings/: elo.py
src/pred/reporting/: markdown.py
src/pred/verdicts/: consensus.py
tests/: test_prediction_engine.py
