[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pred"
version = "0.1.0"
description = "Transparent football prediction engine for World Cup 2026 analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pred = "pred.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
